tests/endtoend/failure/expected/error_keyword_declare2.compile.out
error_keyword_declare2.silly:1:7: error: parse error: extraneous input 'INT32' expecting IDENTIFIER
    1 | INT32 INT32 x;
      |       ^
